2006-05-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/aclocal.m4: STEPMAKE_PYTHON(): clear cached value since
	arg 2 might point us to a new binary (patch by Karl Hammar)
	
2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.6

	* Documentation/topdocs/NEWS.tely (Top): trim explanation. 

	* Documentation/user/*.itely: 2nd
	attempt: replace funindex -> findex globally.

2006-05-24  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* input/no-notation/display-lily-tests.ly: fix \applyOutput
	test. Add \break, \pageBreak, \pageTurn, etc, tests.

	* scm/define-music-display-methods.scm: display methods for
	breaks. Fix \applyOutput.

2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/user/macros.itexi: comment out funindex expansion. 

	* Documentation/user/music-glossary.tely: junk \oldaddlyrics
	everywhere.

	* GNUmakefile.in: fix wildcarding for scrips/out/ links. Thanks
	Karl Hammar. Backportme.
 
	* Documentation/user/advanced-notation.itely (Balloon help): idem.

	* Documentation/user/changing-defaults.itely (Creating contexts): idem.

	* Documentation/user/programming-interface.itely (Running a
	function on all layout objects): idem.

	* Documentation/user/introduction.itely (Automated engraving):
	update \applyOutput syntax

	* lily/lyric-combine-music-iterator.cc (start_new_syllable):
	remove debugging hook.

	* configure.in (LINK_GXX_STATICALLY): use "" to allow $
	expansion. 

	* Documentation/user/GNUmakefile (TEXI2DVI_FLAGS): add -E.

	* stepmake/stepmake/texinfo-rules.make ($(outdir)/%.dvi): add
	TEXI2DVI_FLAGS to texi2dvi invocation. 

2006-05-24  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/chord-tremolo-*.cc: Reworked how \repeat "tremolo"
	works. More work is done by iterator now, and engraver has been
	very much simplified.

	* lily/translator-group.cc: try_music is now invoked through a
	listener

	* lily/*-iterator.cc: Massive cleanups. Junked